# docker-rust-android

./: .gitignore  Dockerfile  README.md  justfile
.github/: dependabot.yml
.github/workflows/: deploy.yml  docker-publish.yml
examples/bevy_game/: Cargo.toml
examples/bevy_game/android/: AndroidManifest.xml  build.gradle  config.gradle  gradle.properties
examples/bevy_game/android/src/com/sergioribera/kill_errors/: MainActivity.kt
examples/bevy_game/src/: lib.rs
examples/freya/: Cargo.toml
examples/freya/android/: AndroidManifest.xml  build.gradle  config.gradle  gradle.properties
examples/freya/src/: lib.rs
examples/rust_lib/: Cargo.toml
examples/rust_lib/android/: AndroidManifest.xml  build.gradle  config.gradle
examples/rust_lib/android/src/main/java/com/sergioribera/rustlib/: JNICallback.java  MainActivity.java
examples/rust_lib/src/: lib.rs
examples/slint/: Cargo.toml  build.rs  gradle.properties  settings.gradle.kts
examples/slint/android/: AndroidManifest.xml  build.gradle.kts
examples/slint/android/src/com/sergioribera/slint_test/: MainActivity.kt
examples/slint/gradle/: libs.versions.toml
examples/slint/src/: lib.rs  main.rs
examples/slint/ui/: index.slint
tools/: apk2aab
