[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[lib]
name = "freya_app"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# freya = "0.3.0-rc.4"
freya = { git = "https://github.com/rebecca-src/freya", branch = "experiment/android" }

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.5", features = ["android-native-activity", "rwh_06"] }

[features]
default = []
desktop = []

[[bin]]
path = "src/lib.rs"
name = "droidapp"
required-features = ["desktop"]
